getting product by its id
