# src/Models/CartModel.js
@@ -1,39 +1,30 @@
+import mongoose from "mongoose";
+const Schema = mongoose.Schema;
 
-import mongoose from 'mongoose';
-
-const { Schema } = mongoose;
-
-const CartItemSchema = new Schema({
-  userId: { type: String },
-  sessionId: { type: String },
-  products: [
-      {
-          productId: { type: mongoose.Schema.Types.ObjectId, ref: 'Product', required: true },
-          productName: { type: String, required: true },
-          price: { type: Number, required: true },
-          description: { type: String },
-          category: { type: String, required: true },
-          image: {
-              public_id: { type: String },
-              asset_id: { type: String },
-              url: { type: String }
-          },
-          quantity: { type: Number, default: 1 }
-      }
-  ]
-}, { timestamps: true });
-
-
-const CartSchema = new Schema({
+const CartSchema = new mongoose.Schema({
   userId: {
-    type: Schema.Types.ObjectId,
+    type: mongoose.Schema.Types.ObjectId,
     ref: 'User',
+    required: false,
   },
-  sessionId: {
-    type: String,
+  productId: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'Product',
+    required: true,
   },
-  items: [CartItemSchema],
+  quantity: {
+    type: Number,
+    required: true,
+    default:0
+  },
+  createdAt: {
+    type: Date,
+    default: Date.now,
+  },
 });
 
-const Cart = mongoose.model('Cart', CartSchema);
+const Cart = new mongoose.model('carts', CartSchema);
+
 export default Cart;
+
+
